# saliency-gan

./: .gitignore  README.md  analyze_results.py  config.json  dataset.py  inference_gt.py  inference_visualize.py  main.py  model.py  pyproject.toml  requirements.txt  test2.py  test_evaluate.py  train.py  training_results.csv  visualize_results.py
results/: results_val_full.csv  results_val_full_no_opt.csv  results_val_summary.csv
src/: analyze_results.py  config.py  dataset.py  inference_gt.py  inference_visualize.py  load_model.py  model.py  test_evaluate.py  train.py  utils.py  visualize_best_worst.py  visualize_image.py  visualize_results.py  visualize_single.py
